--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,8 +1,8 @@
 //====================================================================================================
 .footer {
-   @include adaptiveValue("padding-top", 44, 30);
+   @include adaptiveValue("padding-top", 44, 25);
    @include adaptiveValue("padding-bottom", 33, 20);
-   background: #0D0C14;
+   background: #111111;
    // .footer__container
    &__container {
       display: flex;
@@ -11,7 +11,7 @@
    // .footer__address
    &__address {
       font-weight: 700;
-      font-size: rem(20);
+      @include adaptiveValue("font-size", 20, 16);
       line-height: 120%; /* 24/20 */
       max-width: rem(650);
       text-align: center;
