--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -96,9 +96,9 @@ body {
 // Обмежуючий контейнер ======================================================================================================================================================================================================================
 
 /*
-(i) Стилі будуть застосовуватись до
-всіх класів, що містять *__container
-Наприклад header__container, main__container і т.п.
+(i) Стили будут применяться к
+всех классов, содержащих *__container
+К примеру header__container, main__container и т.п.
 Сніппет (HTML): cnt
 */
 @if ($responsiveType==1) {
